--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,35 @@
-# Firebase config
+# Firebase configuration
 firebaseConfig.js
 
-# Other common files to ignore
+# Dependency directories
 node_modules/
-.DS_Store
+
+# Logs
+logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build output
+build/
+dist/
+
+# IDE/Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# macOS system files
+.DS_Store
+
+# Miscellaneous
+.tmp/
