--- a/.github/workflows/daily-update.yml
+++ b/.github/workflows/daily-update.yml
@@ -45,5 +45,6 @@ jobs:
           git config --global user.name 'GitHub Actions Bot'
           git config --global user.email 'actions@github.com'
           git add data/
-          git commit -m "Update stats for $(date +'%b%d')" || echo "No changes to commit"
+          git commit -m "Update stats for $(date +'%Y%m%d')" || echo "No changes to commit"
+          git pull --rebase origin master || echo "No remote changes to pull"
           git push
