--- a/.github/workflows/round-completion.yml
+++ b/.github/workflows/round-completion.yml
@@ -54,6 +54,7 @@ jobs:
           git config --global user.email 'actions@github.com'
           git add data/
           git commit -m "Complete round ${{ inputs.round_number }} - Update pre-acquisition stats and standings" || echo "No changes to commit"
+          git pull --rebase origin master || echo "No remote changes to pull"
           git push
           
       - name: Create completion summary
